Fix segment count overflow

--- a/public/popup.css
+++ b/public/popup.css
@@ -533,7 +533,8 @@
  * Submissions
 */
 #sponsorTimesContributionsContainer {
-	padding: 8px 14px;
+	min-width: 44px;
+	padding: 8px;
 	border-left: 2px solid var(--sb-grey-bg-color);
 }
 
